Deployment e7896d0d-2d82-48e4-b7f6-c55ed6fa3f84: Run number 735

--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/items.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/items.cshtml
@@ -47,7 +47,7 @@
         }
         else
         {
-            if (content.HasValue("alternateBlockAlias"))
+            if (content.HasValue("gatedBlockAlias"))
             {
                 var blockAlias = content.Value("gatedBlockAlias");
                 var alternateBlockAlias = $"blockgrid/Components/{blockAlias}";
