--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/signInGated.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/signInGated.cshtml
@@ -1,2 +1,29 @@
-<h1>loaded</h1>
+@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem>
 
+@{
+    var settings = Umbraco.ContentAtRoot().FirstOrDefault(x => x.ContentType.Alias == "siteSettings");
+}
+
+<div class="gated-block container container--md" style="background-image: url(../gated-block-bg.jpg);">
+        <div class="container container--sm py-9">
+        <div class="row">
+            <div class="col-md-6 mb-9 mb-md-0">
+                <img src="@(settings?.Value<IPublishedContent>("headerLogo")?.Url())" alt="WRA logo" />
+                <h2 class="h3 mt-3 mb-0">Gated Content</h2>
+            </div>
+            <div class="col-md-6">
+                <p><strong>Log in to see this content and get all the WRA website has to offer.</strong></p>
+                <form>
+                    <label for="gated-username" class="visually-hidden">Username (required)</label>
+                    <input id="gated-username" class="form-control mb-2" type="text" required placeholder="Username" />
+
+                    <label for="gated-password" class="visually-hidden">Password (required)</label>
+                    <input id="gated-password" class="form-control" type="password" required placeholder="Password" />
+
+                    <button class="btn btn-primary my-4" type="submit">Log In</button>
+                </form>
+                <p class="fs-sm">Not a member? <a href="/membership/">Learn how to join the WRA</a></p>
+            </div>
+        </div>
+    </div>
+</div>
