--- a/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
@@ -34,6 +34,7 @@
 @import 'components/quantity-selector';
 @import 'components/modal';
 @import 'components/mywra';
+@import 'components/gated-block';
 
 @import 'blocks/feature-breaker';
 @import 'blocks/layouts';
