Deployment 1b68231a-f244-4824-8bfb-4f7ee0d315ea: Run number 738

--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -4,6 +4,7 @@
 @using System.Linq;
 @using Umbraco.Commerce.Extensions;
 @using Umbraco.Cms.Core.Models.Blocks
+@using Umbraco.Cms.Core.Models.PublishedContent;
 
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.SubCategoryPage>
 @using ContentModels = WRA.Umbraco.Models;
@@ -19,7 +20,10 @@
 }
 
 <script type="text/javascript">
+    // category/subcat should use the key instead of the name
     window.productDataSubCategory = "@(Model.Name)";
+    window.orderId = "@Model.Order.Id";
+    window.storeId = "@Model.GetStore()"
 </script>
 
 <header class="page-header page-header--no-accent">
