--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/signInGated.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/signInGated.cshtml
@@ -1,4 +1,6 @@
-@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem>
+@using Umbraco.Cms.Core.Models.PublishedContent;
+@using Umbraco.Cms.Web.Website.Controllers;
+@using Umbraco.Cms.Web.Common.Models;
 @using Umbraco.Cms.Web.Common.Models
 @using Umbraco.Cms.Web.Common.Security
 @using Umbraco.Cms.Web.Website.Controllers
@@ -7,10 +9,10 @@
 @inject IMemberExternalLoginProviders memberExternalLoginProviders
 @inject ITwoFactorLoginService twoFactorLoginService
 
+@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem>
 @{
-    var settings = Umbraco.ContentAtRoot().FirstOrDefault(x => x.ContentType.Alias == "siteSettings");
-
     var loginModel = new LoginModel();
+    var settings = Umbraco.ContentAtRoot().FirstOrDefault(x => x.ContentType.Alias == "siteSettings");
     loginModel.RedirectUrl = Umbraco.AssignedContentItem.Url();
 }
 
@@ -24,15 +26,41 @@
             <div class="col-md-6">
                 <p><strong>Log in to see this content and get all the WRA website has to offer.</strong></p>
                 @using (Html.BeginUmbracoForm<UmbLoginController>("HandleLogin", new { RedirectUrl = loginModel.RedirectUrl })) {
-                    <label for="gated-username" class="visually-hidden">Username (required)</label>
-                    <input id="gated-username" class="form-control mb-2" type="text" required placeholder="Username" />
+                        <h1>Log In</h1>
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="mb-3">
+                            <label asp-for="@loginModel.Username" class="form-label"></label>
+                            <input asp-for="@loginModel.Username" class="form-control" />
+                            <span asp-validation-for="@loginModel.Username" class="form-text text-danger"></span>
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="@loginModel.Password" class="form-label"></label>
+                            <input asp-for="@loginModel.Password" class="form-control" />
+                            <span asp-validation-for="@loginModel.Password" class="form-text text-danger"></span>
+                        </div>
+                        @*<div class="mb-3 form-check">
+                            <input asp-for="@loginModel.RememberMe" class="form-check-input">
+                            <label asp-for="@loginModel.RememberMe" class="form-check-label">
+                                @Html.DisplayNameFor(m => loginModel.RememberMe)
+                            </label>
+                        </div>*@
+                        <button type="submit" class="btn btn-primary">Login</button>
+                        <div class="d-flex mt-3 fs-sm">
+                            <a href="#">Create Account</a>
+                            <a class="ms-3 ps-3 border-start" href="#">Reset Password</a>
+                            <a class="ms-3 ps-3 border-start" href="#">Help</a>
+                        </div>
+                    }
+                    @* <form>
+                        <label for="gated-username" class="visually-hidden">Username (required)</label>
+                        <input id="gated-username" class="form-control mb-2" type="text" required placeholder="Username" />
 
-                    <label for="gated-password" class="visually-hidden">Password (required)</label>
-                    <input id="gated-password" class="form-control" type="password" required placeholder="Password" />
+                        <label for="gated-password" class="visually-hidden">Password (required)</label>
+                        <input id="gated-password" class="form-control" type="password" required placeholder="Password" />
 
-                    <button class="btn btn-primary my-4" type="submit">Log In</button>
-                }
-                <p class="fs-sm">Not a member? <a href="/membership/">Learn how to join the WRA</a></p>
+                        <button class="btn btn-primary my-4" type="submit">Log In</button>
+                    </form> *@
+                    <p class="fs-sm">Not a member? <a href="/membership/">Learn how to join the WRA</a></p>
             </div>
         </div>
     </div>
