Deployment dcdd4a6f-bdd9-4021-93b1-ec4230feed97: Run number 761

--- a/src/WRA.Umbraco.Web/Views/CheckoutStepPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutStepPage.cshtml
@@ -33,6 +33,11 @@
                 </div>
             </div>
         }
+        else if (Model.ShortStepName == "Account")
+        {
+            <h1 class="mb-4 js-account-heading">Sign In</h1>
+            <partial name="CheckoutBreadcrumbs" />
+        }
         else
         {
             <h1 class="mb-4">Checkout</h1>
