--- a/src/WRA.Umbraco.Web/Views/Partials/CheckoutPrevNext.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/CheckoutPrevNext.cshtml
@@ -1,7 +1,7 @@
 @using WRA.Umbraco.Models;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<CheckoutStepPage>
 
-<div class="d-flex flex-column justify-content-between flex-sm-row mt-4">
+<div class="d-flex flex-column align-items-center justify-content-between flex-sm-row mt-4">
     @if (Model.CanGoBack) 
     {
         if (Model.PreviousStep != null)
