--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/calendar.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/calendar.cshtml
@@ -26,7 +26,7 @@
 
     IEnumerable<IPublishedContent> categoriesProducts = Umbraco.ContentAtRoot()
                                     .DescendantsOrSelfOfType("categoryPage")
-                                    .Where(p => p.HasValue("showInCalendar"))
+                                    .Where(p => p.Value<bool>("showInCalendar") == true)
                                     .OrderBy(p => p.Name);
 }
 
