Deployment 069125c1-4bf0-4bbb-bdae-6a80a1b1372a: Run number 770

--- a/src/WRA.Umbraco.Web/Views/Components/CartCount/CartCount.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Components/CartCount/CartCount.cshtml
@@ -1,5 +1,5 @@
 @model int
 
-<span class="cart-item__image-quantity" aria-label="Your cart contains @Model items">
+<span class="cart-item__image-quantity js-cart-count" aria-label="Your cart contains @Model items">
     @Model
 </span>
