--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/button.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/button.cshtml
@@ -52,7 +52,7 @@
 }
 
 
-<a class="@className" href="@link.Url" target="@link.Target">
+<a class="@className" href="@link?.Url" target="@link?.Target">
     @Html.Raw(link.Name)
     @if (content.Style.ToLower() == "link arrow")
     {
