--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/ctaQuickLinks.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/ctaQuickLinks.cshtml
@@ -23,7 +23,7 @@
                     {
                         var link = content.Value<Link>("ctaLink");
 
-                        <a class="btn btn-primary" href="@link.Url" target="@link.Target">@link.Name</a>
+                        <a class="btn btn-primary" href="@link?.Url" target="@link?.Target">@link?.Name</a>
                     }
                 </div>
             </div>
@@ -36,8 +36,8 @@
                         @foreach (var link in quickLinks)
                         {
                             <li>
-                                <a href="@link.Url" target="@link.Target">
-                                    @link.Name
+                                <a href="@link?.Url" target="@link?.Target">
+                                    @link?.Name
                                     <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M0.820801 8L12.0314 8" stroke="#050F1E" stroke-width="1.37143" stroke-linecap="round"
                                               stroke-linejoin="round" />
