--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/educationCard.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/educationCard.cshtml
@@ -29,5 +29,5 @@
 	{
 		<p>@content.Content</p>
 	}
-	<a href="@link.Url" target="@link.Target" class="btn btn-primary mb-1 mt-auto">@link.Name</a>
+	<a href="@link?.Url" target="@link?.Target" class="btn btn-primary mb-1 mt-auto">@link?.Name</a>
 </div>
