--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/miniCard.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/miniCard.cshtml
@@ -18,8 +18,8 @@
 		<p class="px-2 px-md-0">@Html.Raw(content.Subheadline)</p>
 	}
 
-	<a href="@link.Url" target="@link.Target" class="mini-card__link fs-normal mt-auto stretched-link text-decoration-none fw-bold">
-		@link.Name
+	<a href="@link?.Url" target="@link?.Target" class="mini-card__link fs-normal mt-auto stretched-link text-decoration-none fw-bold">
+		@link?.Name
 		<svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 			<path d="M0.82077 8L12.0313 8" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
 			<path d="M8.51727 4L12.5173 8L8.51727 12" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
