--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -20,10 +20,9 @@
 }
 
 <script type="text/javascript">
-    // category/subcat should use the key instead of the name
     window.productDataSubCategory = "@(Model.Name)";
     window.orderId = "@Model.Order.Id";
-    window.storeId = "@Model.GetStore()"
+    window.storeId = "@Model.GetStore().Id"
 </script>
 
 <header class="page-header page-header--no-accent">
