Deployment 091f96ca-a3b2-4df6-af1f-79930051905a: Run number 783

--- a/src/WRA.Umbraco.Web/Views/_Layout.cshtml
+++ b/src/WRA.Umbraco.Web/Views/_Layout.cshtml
@@ -303,10 +303,10 @@
 
         <div id="search-overlay" class="site-header__search-overlay js-header__search-overlay" aria-hidden="true">
             <div class="container d-flex align-items-center gap-2" style="max-width:508px">
-                <form role="search" method="get" action="/" class="site-header__search flex-grow-1 overflow-hidden">
+                <form role="search" method="get" action="/search" class="site-header__search flex-grow-1 overflow-hidden">
                     <div class="d-flex flex-row align-items-center"> 
                         <label class="visually-hidden" for="header-search-input">Search</label> 
-                        <input type="search" id="header-search-input" class="js-header-search site-header__search-input form-control border-0" name="s" placeholder="Search" required=""> 
+                        <input type="search" id="header-search-input" class="js-header-search site-header__search-input form-control border-0" name="q" placeholder="Search" required=""> 
                         <button type="submit" class="site-header__search-button bg-transparent border-0 px-3 py-2 fs-xl" aria-label="Search">
                             <i class="fa fa-search"></i>
                         </button>
