--- a/src/WRA.Umbraco.Web/Views/SearchResults.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SearchResults.cshtml
@@ -1,34 +1,20 @@
-﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
-
-@section styles {
-    @if (Model.HasValue("styles"))
-    {
-        @Html.Raw(Model.Value("styles"));
-    }
-}
-
-@section scripts {
-    @if (Model.HasValue("scripts"))
-    {
-        @Html.Raw(Model.Value("scripts"));
-    }
-}
-
-@* TODO: Need to connect API *@
+﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<SearchResults>
 
 <div class="container py-5 py-lg-9 d-flex flex-column gap-4 gap-lg-5">
+    <h1 class="h2 mb-2">Search results for: "@Model.searchTerm"</h1>
 
-    <h1 class="h2 mb-2">Search results for: “result Term”</h1>
-
-    @for (var i = 10; i < 21; i++)
+    @foreach (var content in Model.Results)
     {
         <div class="result-card p-4 p-lg-5 position-relative">
-            <a href="/" class="stretched-link text-body text-decoration-none">
-                <h2 class="h5">Lorem ipsum dolor sit amet consectetur. In ornare cras adipiscing in sed amet massa erat. Amet quam feugiat enim nunc lacus id. Semper tellus et et integer.</h2>
+            <a href="@content.Url()" class="stretched-link text-body text-decoration-none">
+                <h2 class="h5">@content.Name</h2>
             </a>
-            <p>Lorem ipsum dolor sit amet consectetur. At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod. Ut non arcu sagittis sit. Vitae quis mauris et eu egestas mauris. Quis pulvinar gravida amet nisl etiam hac suspendisse. Interdum aliquet rhoncus ullamcorper ornare massa eget. Suspendisse cursus faucibus amet massa sed sodales aliquet purus. Risus arcu donec orci ultricies aliquet egestas. Etiam sed...</p>
+            @if (content.HasValue("metaDescription"))
+            {
+                <p>@content.Value("metaDescription")</p>
+            }
         </div>
     }
 
-    <button class="js-site-search-load btn btn-secondary border-0 align-self-center w-100 w-md-auto px-4 mt-2">Load More</button>
+    @* <button class="js-site-search-load btn btn-secondary border-0 align-self-center w-100 w-md-auto px-4 mt-2">Load More</button> *@
 </div>
